--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,28 @@
 services:
+  bot:
+    build: .
+    container_name: telegram-langbot
+    depends_on:
+      - libretranslate
+      - db
+    env_file:
+      - ./.env
+      
+    networks:
+      - botnet
   db:
     image: postgres:16-alpine
     container_name: langbot-db
     restart: always
     ports:
-      - "5432:5432"
+      - '5432:5432'
     env_file:
       - ./.env
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
       - botnet
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
-      interval: 5s
-      timeout: 3s
-      retries: 5
-      start_period: 10s
-
+ 
   libretranslate:
     image: libretranslate/libretranslate:v1.8.3
     container_name: libretranslate
@@ -29,31 +34,18 @@ services:
       - --debug
     ports:
       - "5000:5000"
+    volumes:
+      - libretranslate-data:/home/libretranslate/.local
     restart: unless-stopped
     networks:
       - botnet
-    depends_on:
-      db:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD-SHELL", "curl -sSf http://localhost:5000/health || exit 1"]
-      interval: 5s
-      timeout: 3s
-      retries: 5
-      start_period: 10s
+    dns:
+      - 1.1.1.1
+      - 8.8.8.8
 
-  bot:
-    build: .
-    container_name: telegram-langbot
-    env_file:
-      - ./.env
-    networks:
-      - botnet
-    depends_on:
-      db:
-        condition: service_healthy
-      libretranslate:
-        condition: service_healthy
+
+
+
 
 networks:
   botnet:
